syntax = "proto3";
package ru.microservices.authentication_service;
option java_multiple_files = true;


message TokenResponse{
  string accessToken = 2;
  string refreshToken = 3;
}