syntax = "proto3";

option java_package = "ru.microservices.proto";

option java_multiple_files = true;

message ValidateTokenResponse{
  bool hasAccess = 1;
}